# hf-translation-management

./: .gitignore  README.md  pyproject.toml
hf_translations/: cli.py  git.py  printer.py
hf_translations/translations/: __init__.py  document.py  languages.py  summary.py
